# serial-responder-qt-based

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: update_file_header.py
src/: CMakeLists.txt  loggerwidget.cpp  loggerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/configuration/: configmanager.cpp  configmanager.h
src/custom_widgets/: signalindicator.cpp  signalindicator.h
src/responder/: asciihexdelegate.cpp  asciihexdelegate.h  datatablemodel.cpp  datatablemodel.h  matcher.cpp  matcher.h  responderpackethandler.cpp  responderpackethandler.h  responderwidget.cpp  responderwidget.h  responderwidget.ui
src/serialport/: serialmanager.cpp  serialmanager.h  serialwidget.cpp  serialwidget.h
src/terminal/: rowlinedelegate.cpp  rowlinedelegate.h  terminalinputwidget.cpp  terminalinputwidget.h  terminalsplitwidget.cpp  terminalsplitwidget.h  terminaltablemodel.cpp  terminaltablemodel.h  terminalviewwidget.cpp  terminalviewwidget.h
tests/: test.txt
